--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "bcryptjs": "^2.4.3",
+    "js-cookie": "^3.0.5",
+    "mongodb": "^6.2.0",
+    "mongoose": "^8.0.0",
     "next": "14.0.1",
+    "next-auth": "^4.24.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "eslint": "8.53.0",
-    "eslint-config-next": "14.0.1"
+    "eslint-config-next": "14.0.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
